--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_FIREBASE_APIKEY="AIzaSyCGnEkodvD0SukapYhRrLgtv43Zq5XVKjs"
 REACT_APP_FIREBASE_DOMAIN="react-todo-fadad.firebaseapp.com"
-REACT_APP_FIREBASE_DATABASE=""
+REACT_APP_FIREBASE_DATABASE="https://react-todo-fadad.firebaseio.com"
 REACT_APP_FIREBASE_PROJECT_ID="react-todo-fadad"
 REACT_APP_FIREBASE_STOREAGE_BUCKET="react-todo-fadad.appspot.com"
 REACT_APP_FIREBASE_SENDER_ID="366895549035"
