--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 
 # misc
 .DS_Store
+*.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,3 +23,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# eslint
+*.eslintcache
+
+# firebase 
+.firebase.rules
+.storage.rules
+database.rules.json
